--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,56 @@
   height: 100px;
   width: 100px;
 }
-.container {
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+.container1 {
   position: relative;
   margin-top: 20px;
 }
+.container {
+  border: 2px solid #ccc;
+  background-color: #333;
+  border-radius: 5px;
+  padding: 16px;
+  margin: 16px 0;
+}
 
+/* Clear floats after containers */
+.container::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+/* Float images inside the container to the left. Add a right margin, and style the image as a circle */
+.container img {
+  float: left;
+  margin-right: 20px;
+  border-radius: 50%;
+}
+
+/* Increase the font-size of a span element */
+.container span {
+  font-size: 20px;
+  margin-right: 15px;
+}
+
+/* Add media queries for responsiveness. This will center both the text and the image inside the container */
+@media (max-width: 500px) {
+  .container {
+    text-align: center;
+  }
+
+  .container img {
+    margin: auto;
+    float: none;
+    display: block;
+  }
+}
 body {
   color: white;
   background: url(https://puu.sh/CK2Zk/baf41e0724.png);
