--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@
   background-color: #333;
   border-radius: 5px;
   padding: 16px;
-  margin: 16px 0;
+  margin: 16px auto;
 }
 
 /* Clear floats after containers */
